07/m08a02arrays2-handout/grading/2023-10-30-10-25-06/compile.err
ArrayUtils.java:3: error: illegal start of type
  for (int i = 0; i < arr.length; i++) {
  ^
ArrayUtils.java:3: error: > or ',' expected
  for (int i = 0; i < arr.length; i++) {
                                ^
ArrayUtils.java:3: error: <identifier> expected
  for (int i = 0; i < arr.length; i++) {
                                   ^
ArrayUtils.java:6: error: illegal start of type
  return copy;
  ^
ArrayUtils.java:6: error: <identifier> expected
  return copy;
             ^
ArrayUtils.java:9: error: class, interface, enum, or record expected
public static int[][] deepCopy(int[][] arrArr) {
              ^
ArrayUtils.java:11: error: class, interface, enum, or record expected
  for (int i = 0; i < arrArr.length; i++) {
  ^
ArrayUtils.java:11: error: class, interface, enum, or record expected
  for (int i = 0; i < arrArr.length; i++) {
                  ^
ArrayUtils.java:11: error: class, interface, enum, or record expected
  for (int i = 0; i < arrArr.length; i++) {
                                     ^
ArrayUtils.java:13: error: class, interface, enum, or record expected
  }
  ^
ArrayUtils.java:15: error: class, interface, enum, or record expected
}
^
11 errors
